// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckableButton /> basic matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0.k-Button--hasBorderRadius {
  border-radius: var(--border-radius);
}

.c0.k-Button--nano {
  min-width: 6.25rem;
  min-height: 1.25rem;
  padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--micro {
  min-width: 8.125rem;
  min-height: 1.875rem;
  padding: 0 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--tiny {
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
}

.c0.k-Button--huge {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c0.k-Button--giant {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid) {
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
  width: 1.25rem;
  height: 1.25rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
  width: 1.875rem;
  height: 1.875rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
  width: 2.5rem;
  height: 2.5rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c0.k-Button--fluid {
  min-width: initial;
  width: 100%;
}

.c0.k-Button--rounded {
  border-radius: 50%;
}

.c0.k-Button--orion {
  border-radius: 0.375rem;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1::after {
  content: '';
  position: absolute;
  width: 1.25rem;
  height: 1.25rem;
  bottom: -0.6875rem;
  background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+PGNpcmNsZSBmaWxsPSIjMTliNGZhIiBjeD0iMTAiIGN5PSIxMCIgcj0iMTAiIC8+PHBhdGggZmlsbD0iI2ZmZiIgZD0iTTguMjMyIDEzLjg5bC43MDcuNzA2IDUuNjU2LTUuNjU3LTEuNDE0LTEuNDE1LTQuMjQzIDQuMjQzLTIuMTIyLTIuMTIyLTEuNDE0IDEuNDE1IDIuODI4IDIuODN6Ii8+PC9zdmc+);
  background-repeat: no-repeat;
  background-position: 50% 50%;
  opacity: 0;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-transition: opacity 0.2s ease,-webkit-transform 0.2s cubic-bezier(0.3,-0.5,0.8,1);
  -webkit-transition: opacity 0.2s ease,transform 0.2s cubic-bezier(0.3,-0.5,0.8,1);
  transition: opacity 0.2s ease,transform 0.2s cubic-bezier(0.3,-0.5,0.8,1);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c1[aria-checked='true']::after {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-timing-function: ease,cubic-bezier(0.2,2,0.7,1);
  transition-timing-function: ease,cubic-bezier(0.2,2,0.7,1);
}

.c1:hover,
.c1:focus {
  border-color: #bae8fd;
  background-color: #fff;
  color: #19b4fa;
}

.c1:active {
  border-color: #05a8e6;
  background-color: #fff;
  color: #05a8e6;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--nano {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--micro {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--tiny {
    width: 10rem;
    height: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--big {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:768px) {
  .c0.k-Button--huge {
    min-width: 13.75rem;
    min-height: 5rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--huge {
    width: 13.75rem;
    height: 5rem;
  }
}

@media (min-width:768px) {
  .c0.k-Button--giant {
    min-width: 13.75rem;
    min-height: 5.625rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--giant {
    width: 13.75rem;
    height: 5.625rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid) {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
    width: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
    width: 1.875rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
    width: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    min-width: 0;
    min-height: 0;
    padding: 0;
    width: 4.375rem;
    height: 4.375rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    width: 4.375rem;
  }
}

@media (min-width:48rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    min-width: initial;
    width: 5rem;
    height: 5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    width: 5rem;
  }
}

@media (min-width:48rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    min-width: initial;
    width: 5.625rem;
    height: 5.625rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    width: 5.625rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--orion {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<button
  aria-checked={false}
  className="c0 k-Button c1 k-Button--normal k-Button--hydrogen k-Button--andromeda"
  disabled={false}
  style={
    Object {
      "--border-radius": 0,
    }
  }
  type="button"
>
  MyCheckableButton
</button>
`;

exports[`<CheckableButton /> with \`big\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  border: 0.125rem solid #bae8fd;
  background-color: #fff;
  color: #19b4fa;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0.k-Button--hasBorderRadius {
  border-radius: var(--border-radius);
}

.c0.k-Button--nano {
  min-width: 6.25rem;
  min-height: 1.25rem;
  padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--micro {
  min-width: 8.125rem;
  min-height: 1.875rem;
  padding: 0 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--tiny {
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
}

.c0.k-Button--huge {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c0.k-Button--giant {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid) {
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
  width: 1.25rem;
  height: 1.25rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
  width: 1.875rem;
  height: 1.875rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
  width: 2.5rem;
  height: 2.5rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c0.k-Button--fluid {
  min-width: initial;
  width: 100%;
}

.c0.k-Button--rounded {
  border-radius: 50%;
}

.c0.k-Button--orion {
  border-radius: 0.375rem;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1::after {
  content: '';
  position: absolute;
  width: 1.25rem;
  height: 1.25rem;
  bottom: -0.6875rem;
  background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+PGNpcmNsZSBmaWxsPSIjMTliNGZhIiBjeD0iMTAiIGN5PSIxMCIgcj0iMTAiIC8+PHBhdGggZmlsbD0iI2ZmZiIgZD0iTTguMjMyIDEzLjg5bC43MDcuNzA2IDUuNjU2LTUuNjU3LTEuNDE0LTEuNDE1LTQuMjQzIDQuMjQzLTIuMTIyLTIuMTIyLTEuNDE0IDEuNDE1IDIuODI4IDIuODN6Ii8+PC9zdmc+);
  background-repeat: no-repeat;
  background-position: 50% 50%;
  opacity: 0;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-transition: opacity 0.2s ease,-webkit-transform 0.2s cubic-bezier(0.3,-0.5,0.8,1);
  -webkit-transition: opacity 0.2s ease,transform 0.2s cubic-bezier(0.3,-0.5,0.8,1);
  transition: opacity 0.2s ease,transform 0.2s cubic-bezier(0.3,-0.5,0.8,1);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c1[aria-checked='true']::after {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-timing-function: ease,cubic-bezier(0.2,2,0.7,1);
  transition-timing-function: ease,cubic-bezier(0.2,2,0.7,1);
}

.c1:hover,
.c1:focus {
  border-color: #bae8fd;
  background-color: #fff;
  color: #19b4fa;
}

.c1:active {
  border-color: #05a8e6;
  background-color: #fff;
  color: #05a8e6;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--nano {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--micro {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--tiny {
    width: 10rem;
    height: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--big {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:768px) {
  .c0.k-Button--huge {
    min-width: 13.75rem;
    min-height: 5rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--huge {
    width: 13.75rem;
    height: 5rem;
  }
}

@media (min-width:768px) {
  .c0.k-Button--giant {
    min-width: 13.75rem;
    min-height: 5.625rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--giant {
    width: 13.75rem;
    height: 5.625rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid) {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
    width: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
    width: 1.875rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
    width: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    min-width: 0;
    min-height: 0;
    padding: 0;
    width: 4.375rem;
    height: 4.375rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    width: 4.375rem;
  }
}

@media (min-width:48rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    min-width: initial;
    width: 5rem;
    height: 5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    width: 5rem;
  }
}

@media (min-width:48rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    min-width: initial;
    width: 5.625rem;
    height: 5.625rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    width: 5.625rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--orion {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<button
  aria-checked={true}
  className="c0 k-Button c1 k-Button--big k-Button--lithium k-Button--andromeda"
  disabled={false}
  style={
    Object {
      "--border-radius": 0,
    }
  }
  type="button"
>
  MyCheckableButton
</button>
`;

exports[`<CheckableButton /> with \`disabled\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  border: 0.125rem solid #bae8fd;
  background-color: #fff;
  color: #19b4fa;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0.k-Button--hasBorderRadius {
  border-radius: var(--border-radius);
}

.c0.k-Button--nano {
  min-width: 6.25rem;
  min-height: 1.25rem;
  padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--micro {
  min-width: 8.125rem;
  min-height: 1.875rem;
  padding: 0 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--tiny {
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
}

.c0.k-Button--huge {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c0.k-Button--giant {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid) {
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
  width: 1.25rem;
  height: 1.25rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
  width: 1.875rem;
  height: 1.875rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
  width: 2.5rem;
  height: 2.5rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c0.k-Button--fluid {
  min-width: initial;
  width: 100%;
}

.c0.k-Button--rounded {
  border-radius: 50%;
}

.c0.k-Button--orion {
  border-radius: 0.375rem;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1::after {
  content: '';
  position: absolute;
  width: 1.25rem;
  height: 1.25rem;
  bottom: -0.6875rem;
  background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+PGNpcmNsZSBmaWxsPSIjZDhkOGQ4IiBjeD0iMTAiIGN5PSIxMCIgcj0iMTAiIC8+PHBhdGggZmlsbD0iI2ZmZiIgZD0iTTguMjMyIDEzLjg5bC43MDcuNzA2IDUuNjU2LTUuNjU3LTEuNDE0LTEuNDE1LTQuMjQzIDQuMjQzLTIuMTIyLTIuMTIyLTEuNDE0IDEuNDE1IDIuODI4IDIuODN6Ii8+PC9zdmc+);
  background-repeat: no-repeat;
  background-position: 50% 50%;
  opacity: 0;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-transition: opacity 0.2s ease,-webkit-transform 0.2s cubic-bezier(0.3,-0.5,0.8,1);
  -webkit-transition: opacity 0.2s ease,transform 0.2s cubic-bezier(0.3,-0.5,0.8,1);
  transition: opacity 0.2s ease,transform 0.2s cubic-bezier(0.3,-0.5,0.8,1);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c1[aria-checked='true']::after {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-timing-function: ease,cubic-bezier(0.2,2,0.7,1);
  transition-timing-function: ease,cubic-bezier(0.2,2,0.7,1);
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--nano {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--micro {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--tiny {
    width: 10rem;
    height: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--big {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:768px) {
  .c0.k-Button--huge {
    min-width: 13.75rem;
    min-height: 5rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--huge {
    width: 13.75rem;
    height: 5rem;
  }
}

@media (min-width:768px) {
  .c0.k-Button--giant {
    min-width: 13.75rem;
    min-height: 5.625rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--giant {
    width: 13.75rem;
    height: 5.625rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid) {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
    width: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
    width: 1.875rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
    width: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    min-width: 0;
    min-height: 0;
    padding: 0;
    width: 4.375rem;
    height: 4.375rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    width: 4.375rem;
  }
}

@media (min-width:48rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    min-width: initial;
    width: 5rem;
    height: 5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    width: 5rem;
  }
}

@media (min-width:48rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    min-width: initial;
    width: 5.625rem;
    height: 5.625rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    width: 5.625rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--orion {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<button
  aria-checked={true}
  className="c0 k-Button c1 k-Button--normal k-Button--lithium k-Button--andromeda"
  disabled={true}
  style={
    Object {
      "--border-radius": 0,
    }
  }
  type="button"
>
  MyCheckableButton
</button>
`;

exports[`<CheckableButton /> with \`error\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  border: 0.125rem solid #ffb2c7;
  background-color: #fff;
  color: #ff0046;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0.k-Button--hasBorderRadius {
  border-radius: var(--border-radius);
}

.c0.k-Button--nano {
  min-width: 6.25rem;
  min-height: 1.25rem;
  padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--micro {
  min-width: 8.125rem;
  min-height: 1.875rem;
  padding: 0 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--tiny {
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
}

.c0.k-Button--huge {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c0.k-Button--giant {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid) {
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
  width: 1.25rem;
  height: 1.25rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
  width: 1.875rem;
  height: 1.875rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
  width: 2.5rem;
  height: 2.5rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c0.k-Button--fluid {
  min-width: initial;
  width: 100%;
}

.c0.k-Button--rounded {
  border-radius: 50%;
}

.c0.k-Button--orion {
  border-radius: 0.375rem;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: currentColor;
  background-color: #fff;
  color: #ff0046;
}

.c0:active {
  border-color: currentColor;
  background-color: #fff;
  color: #ff0046;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1::after {
  content: '';
  position: absolute;
  width: 1.25rem;
  height: 1.25rem;
  bottom: -0.6875rem;
  background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+PGNpcmNsZSBmaWxsPSIjZmYwMDQ2IiBjeD0iMTAiIGN5PSIxMCIgcj0iMTAiIC8+PHBhdGggZmlsbD0iI2ZmZiIgZD0iTTguMjMyIDEzLjg5bC43MDcuNzA2IDUuNjU2LTUuNjU3LTEuNDE0LTEuNDE1LTQuMjQzIDQuMjQzLTIuMTIyLTIuMTIyLTEuNDE0IDEuNDE1IDIuODI4IDIuODN6Ii8+PC9zdmc+);
  background-repeat: no-repeat;
  background-position: 50% 50%;
  opacity: 0;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-transition: opacity 0.2s ease,-webkit-transform 0.2s cubic-bezier(0.3,-0.5,0.8,1);
  -webkit-transition: opacity 0.2s ease,transform 0.2s cubic-bezier(0.3,-0.5,0.8,1);
  transition: opacity 0.2s ease,transform 0.2s cubic-bezier(0.3,-0.5,0.8,1);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c1[aria-checked='true']::after {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-timing-function: ease,cubic-bezier(0.2,2,0.7,1);
  transition-timing-function: ease,cubic-bezier(0.2,2,0.7,1);
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--nano {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--micro {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--tiny {
    width: 10rem;
    height: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--big {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:768px) {
  .c0.k-Button--huge {
    min-width: 13.75rem;
    min-height: 5rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--huge {
    width: 13.75rem;
    height: 5rem;
  }
}

@media (min-width:768px) {
  .c0.k-Button--giant {
    min-width: 13.75rem;
    min-height: 5.625rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--giant {
    width: 13.75rem;
    height: 5.625rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid) {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
    width: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
    width: 1.875rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
    width: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    min-width: 0;
    min-height: 0;
    padding: 0;
    width: 4.375rem;
    height: 4.375rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    width: 4.375rem;
  }
}

@media (min-width:48rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    min-width: initial;
    width: 5rem;
    height: 5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    width: 5rem;
  }
}

@media (min-width:48rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    min-width: initial;
    width: 5.625rem;
    height: 5.625rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    width: 5.625rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--orion {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<button
  aria-checked={true}
  className="c0 k-Button c1 k-Button--normal k-Button--copper k-Button--andromeda"
  disabled={false}
  style={
    Object {
      "--border-radius": 0,
    }
  }
  type="button"
>
  MyCheckableButton
</button>
`;

exports[`<CheckableButton /> with \`tiny\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  border: 0.125rem solid #bae8fd;
  background-color: #fff;
  color: #19b4fa;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0.k-Button--hasBorderRadius {
  border-radius: var(--border-radius);
}

.c0.k-Button--nano {
  min-width: 6.25rem;
  min-height: 1.25rem;
  padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--micro {
  min-width: 8.125rem;
  min-height: 1.875rem;
  padding: 0 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--tiny {
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
}

.c0.k-Button--huge {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c0.k-Button--giant {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid) {
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
  width: 1.25rem;
  height: 1.25rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
  width: 1.875rem;
  height: 1.875rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
  width: 2.5rem;
  height: 2.5rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c0.k-Button--fluid {
  min-width: initial;
  width: 100%;
}

.c0.k-Button--rounded {
  border-radius: 50%;
}

.c0.k-Button--orion {
  border-radius: 0.375rem;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1::after {
  content: '';
  position: absolute;
  width: 1.25rem;
  height: 1.25rem;
  bottom: -0.6875rem;
  background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+PGNpcmNsZSBmaWxsPSIjMTliNGZhIiBjeD0iMTAiIGN5PSIxMCIgcj0iMTAiIC8+PHBhdGggZmlsbD0iI2ZmZiIgZD0iTTguMjMyIDEzLjg5bC43MDcuNzA2IDUuNjU2LTUuNjU3LTEuNDE0LTEuNDE1LTQuMjQzIDQuMjQzLTIuMTIyLTIuMTIyLTEuNDE0IDEuNDE1IDIuODI4IDIuODN6Ii8+PC9zdmc+);
  background-repeat: no-repeat;
  background-position: 50% 50%;
  opacity: 0;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-transition: opacity 0.2s ease,-webkit-transform 0.2s cubic-bezier(0.3,-0.5,0.8,1);
  -webkit-transition: opacity 0.2s ease,transform 0.2s cubic-bezier(0.3,-0.5,0.8,1);
  transition: opacity 0.2s ease,transform 0.2s cubic-bezier(0.3,-0.5,0.8,1);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c1[aria-checked='true']::after {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-timing-function: ease,cubic-bezier(0.2,2,0.7,1);
  transition-timing-function: ease,cubic-bezier(0.2,2,0.7,1);
}

.c1:hover,
.c1:focus {
  border-color: #bae8fd;
  background-color: #fff;
  color: #19b4fa;
}

.c1:active {
  border-color: #05a8e6;
  background-color: #fff;
  color: #05a8e6;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--nano {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--micro {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--tiny {
    width: 10rem;
    height: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--big {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:768px) {
  .c0.k-Button--huge {
    min-width: 13.75rem;
    min-height: 5rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--huge {
    width: 13.75rem;
    height: 5rem;
  }
}

@media (min-width:768px) {
  .c0.k-Button--giant {
    min-width: 13.75rem;
    min-height: 5.625rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--giant {
    width: 13.75rem;
    height: 5.625rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid) {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
    width: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
    width: 1.875rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
    width: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    min-width: 0;
    min-height: 0;
    padding: 0;
    width: 4.375rem;
    height: 4.375rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    width: 4.375rem;
  }
}

@media (min-width:48rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    min-width: initial;
    width: 5rem;
    height: 5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    width: 5rem;
  }
}

@media (min-width:48rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    min-width: initial;
    width: 5.625rem;
    height: 5.625rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    width: 5.625rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--orion {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<button
  aria-checked={true}
  className="c0 k-Button c1 k-Button--tiny k-Button--lithium k-Button--andromeda"
  disabled={false}
  style={
    Object {
      "--border-radius": 0,
    }
  }
  type="button"
>
  MyCheckableButton
</button>
`;
